# mat_mul_MPI

./: CMakeLists.txt  README.md  main_mpi.cpp
